src-tauri/crates/cc-router-tui/tests/snapshots/ui__subscriptions_dirty_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut a, 80, 24)"
---
"╭ cc-router ──────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(64, " "), (66, " "), (68, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ 智谱主号 * ──────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"│ 状态      ● 正常                                                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (15, " "), (17, " ")]
"│ 厂商      智谱 · api_key                                                     │" Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " ")]
"│ 端点      https://open.bigmodel.cn/api/anthropic                             │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 槽位                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   fable   m3                      auto 已修改                                │" Hidden by multi-width symbols: [(42, " "), (44, " "), (46, " ")]
"│   opus    glm-4.6                 high                                       │"
"│   sonnet  glm-4.6                 auto                                       │"
"│   haiku   glm-4.5-air             auto                                       │"
"│   兜底    (未配置)                                                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (18, " ")]
"│ 限额      日限额    ━━━━━━━━━━━━━━━━━━━━─────────────   62% 620 / 1.0K       │" Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " "), (17, " ")]
"│ 余额      账户不可用 (可能欠费或被封)                                        │" Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
"│           余额 39.28 CNY                                                     │" Hidden by multi-width symbols: [(13, " "), (15, " ")]
"│           赠送余额 1.00 CNY 即将过期                                         │" Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
"│ 模型      已缓存 12 个                                                       │" Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " "), (17, " "), (23, " ")]
"│ 被引用    model-sonnet、model-opus                                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (25, " ")]
"│ 最近错误  —                                                                  │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────── Esc 返回 ╯" Hidden by multi-width symbols: [(75, " "), (77, " ")]
" 1-5 切页   ↑↓ 选择   s 保存   Esc 放弃   ⏎ 改模型   o 改档位   ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (16, " "), (18, " "), (25, " "), (27, " "), (36, " "), (38, " "), (45, " "), (47, " "), (49, " "), (56, " "), (58, " "), (60, " "), (67, " "), (69, " "), (76, " "), (78, " ")]
