src-tauri/crates/cc-router-tui/tests/snapshots/ui__systemone_detail_80x24.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut a, 80, 24)"
---
"╭ cc-router ──────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(64, " "), (66, " "), (68, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Ollama 决策 ─────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(10, " "), (12, " ")]
"│ 状态      ● 正常                                                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (15, " "), (17, " ")]
"│ 厂商      Ollama · api_key                                                   │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 端点      https://example.invalid                                            │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 槽位                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   jev     clef-flash                                                         │"
"│ 限额      —                                                                  │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 余额      该厂商不支持余额查询                                               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
"│ 模型      还没获取过,按 m 刷新                                               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (24, " "), (29, " "), (31, " ")]
"│ 被引用    没有被任何虚拟模型引用                                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " ")]
"│ 最近错误  —                                                                  │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────── Esc 返回 ╯" Hidden by multi-width symbols: [(75, " "), (77, " ")]
" 1-5 切页   ↑↓ 选择   ⏎ 改模型   o 改档位   s 保存   e 启停     ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (16, " "), (18, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (47, " "), (49, " "), (56, " "), (58, " "), (67, " "), (69, " "), (76, " "), (78, " ")]
