src-tauri/crates/cc-router-tui/tests/snapshots/ui__virtual_models_120x40.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut vm_app(false), 120, 40)"
---
"╭ cc-router ──────────────────────────────────────────────────────────────────────────────────────── ● 已连接 · v9.9.9 ╮" Hidden by multi-width symbols: [(104, " "), (106, " "), (108, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 虚拟模型 ────────────────────╮╭ model-fable ─────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"│ ▌ model-fable       顺序   2 ││ ▌  1 ● 智谱主号          p                                                           │" Hidden by multi-width symbols: [(23, " "), (25, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
"│   model-opus        轮询   3 ││    2 ? ghost-le (已删除)                                                             │" Hidden by multi-width symbols: [(23, " "), (25, " "), (52, " "), (54, " "), (56, " ")]
"│   model-sonnet      会话   3 ││                                                                                      │" Hidden by multi-width symbols: [(23, " "), (25, " ")]
"│   model-haiku       顺序   0 ││                                                                                      │" Hidden by multi-width symbols: [(23, " "), (25, " ")]
"│   model-fallback    顺序   3 ││                                                                                      │" Hidden by multi-width symbols: [(23, " "), (25, " ")]
"│   model-jev         顺序   1 ││                                                                                      │" Hidden by multi-width symbols: [(23, " "), (25, " ")]
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"╰──────────────────────────────╯╰──────────────────────────────────────────────────────── 顺序 (sequential) · 2 个订阅 ╯" Hidden by multi-width symbols: [(91, " "), (93, " "), (113, " "), (115, " "), (117, " ")]
" 1-5 切页   ↑↓ 选择   ⏎ 成员   m 模式   s 保存                                                          ? 帮助   q 退出 " Hidden by multi-width symbols: [(6, " "), (8, " "), (16, " "), (18, " "), (25, " "), (27, " "), (34, " "), (36, " "), (43, " "), (45, " "), (107, " "), (109, " "), (116, " "), (118, " ")]
