src-tauri/crates/cc-router-tui/tests/snapshots/ui__wizard_custom_120x40.snap
---
source: crates/cc-router-tui/tests/ui.rs
expression: "render(&mut a, 120, 40)"
---
"╭ cc-router ───────────────────────────────────────────────────────────────────────────────────────────────── ⠯ 连接中 ╮" Hidden by multi-width symbols: [(113, " "), (115, " "), (117, " ")]
"│ 1 总览   2 订阅   3 虚拟模型   4 实时路由   5 日志                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (49, " "), (51, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 新建订阅 · 自定义 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " ")]
"│                                                                                                                      │"
"│    协议        Anthropic 兼容                                                                                ⏎ 选择  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (28, " "), (30, " "), (114, " "), (116, " ")]
"│    厂商名      我的中转                                                                                              │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (18, " "), (20, " "), (22, " "), (24, " ")]
"│    Base URL    https://api.example.com                                                                               │"
"│    请求路径    /v1/messages                                                                                          │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " ")]
"│    鉴权        Authorization · Bearer                                                                        ⏎ 选择  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (114, " "), (116, " ")]
"│    API Key     ••••••                                                                            Ctrl+R 显示 / 隐藏  │" Hidden by multi-width symbols: [(107, " "), (109, " "), (114, " "), (116, " ")]
"│    备注名      我的中转                                                                                              │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (18, " "), (20, " "), (22, " "), (24, " ")]
"│                                                   [ 获取模型列表 ]                                                   │" Hidden by multi-width symbols: [(55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " ")]
"│    fable       claude-sonnet-4                                                                               ⏎ 选择  │" Hidden by multi-width symbols: [(114, " "), (116, " ")]
"│    opus        claude-sonnet-4                                                                               ⏎ 选择  │" Hidden by multi-width symbols: [(114, " "), (116, " ")]
"│    sonnet      claude-sonnet-4                                                                               ⏎ 选择  │" Hidden by multi-width symbols: [(114, " "), (116, " ")]
"│    haiku       claude-haiku-4                                                                                ⏎ 选择  │" Hidden by multi-width symbols: [(114, " "), (116, " ")]
"│  ▌ 兜底        (未配置)                                                                                      ⏎ 选择  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (19, " "), (21, " "), (23, " "), (114, " "), (116, " ")]
"│                                                       [ 创建 ]                                                       │" Hidden by multi-width symbols: [(59, " "), (61, " ")]
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" ↑↓ 字段   ⏎ 选择                                                                                              Esc 取消 " Hidden by multi-width symbols: [(5, " "), (7, " "), (14, " "), (16, " "), (116, " "), (118, " ")]
